@@ -1,7 +1,7 @@
 package com.example.p3.dtos;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.example.p3.entities.Jurisdiction;
 import com.example.p3.entities.Tool;
@@ -12,21 +12,16 @@ public class JurisdictionDto {
     // attributes of Jurisdiction
     private long id;
     private String name;
-    private ArrayList<String> tools;
+    private List<String> tools;
 
     public JurisdictionDto(Jurisdiction j){
         this.id = j.getId();
         this.name = j.getName();
-        this.tools = new ArrayList<>();
-
         // Checks all tools for jurisdiction and adds it to the jurisdiction list.
-        // TJEK LIGE DENNE COMMENT!
-        String toolName;
-        List<Tool> toolList = j.getJurisdictionTools().stream().toList();
-        for (int i = 0; i < toolList.size(); i++) {
-            toolName = toolList.get(i).getName();
-            this.tools.add(toolName);
-        }
+        this.tools = j.getJurisdictionTools().stream().
+                map(Tool::getName).
+                collect(Collectors.toList());
+
     }
 }
 
